# cryptobox

./: .gitignore  CMakeLists.txt  README.md  conan_dependencies.txt  conan_recipe.py  conanfile.txt  configure  test  test.cpp
src/: All.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Client.cpp  CryptoBoxService.cpp  CryptoBoxService.h  KeyHandle.cpp  KeyHandle.h  Message.cpp  Message.h  Operations.cpp  Operations.h  Signature.cpp  Signature.h  Types.h  cryptobox.cpp  main.cpp
src/detail/: HexIterator.h
src/detail/backend/openssl/: OpenSsl.h
